# douyin-algorithm

./: ByteBuf.cpp  ByteBuf.h  ByteBuf.hpp  CMakeLists.txt  README.md  argus.cpp  argus.h  argus.pb.cc  argus.pb.h  argus.proto  common.cpp  common.h  hexdump.hpp  ladon.cpp  ladon.h  main.cpp
crypto/: simon.c  simon.h  sm3.c
include/: bytearray.hpp  bytearray_processor.hpp  bytearray_reader.hpp  bytearray_view.hpp  endianness.hpp
